Automatic code reformat