@@ -31,86 +31,87 @@ import java.nio.ByteBuffer;
  */
 public class DirectBufferDeallocator {
 
-    private interface Deallocator {
-        void free(ByteBuffer bb);
-    }
+	private interface Deallocator {
+		void free( ByteBuffer bb );
+	}
 
-    private static class Java8Deallocator implements Deallocator {
+	private static class Java8Deallocator implements Deallocator {
 
-        /*
-         * Getting instance of cleaner from buffer (sun.misc.Cleaner)
-         */
+		/*
+		 * Getting instance of cleaner from buffer (sun.misc.Cleaner)
+		 */
 
-        final Method cleanerAccessor;
-        final Method clean;
+		final Method cleanerAccessor;
+		final Method clean;
 
-        Java8Deallocator() {
-            try {
-                cleanerAccessor = Class.forName("sun.nio.ch.DirectBuffer").getMethod("cleaner", (Class<?>[]) null);
-                clean = Class.forName("sun.misc.Cleaner").getMethod("clean");
-            } catch (NoSuchMethodException | ClassNotFoundException t) {
-                throw new RuntimeException(t);
-            }
-        }
+		Java8Deallocator() {
+			try {
+				cleanerAccessor = Class.forName( "sun.nio.ch.DirectBuffer" ).getMethod( "cleaner",
+						(Class< ? >[]) null );
+				clean = Class.forName( "sun.misc.Cleaner" ).getMethod( "clean" );
+			} catch( NoSuchMethodException | ClassNotFoundException t ) {
+				throw new RuntimeException( t );
+			}
+		}
 
-        @Override
-        public void free(ByteBuffer bb) {
-            try {
-                clean.invoke(cleanerAccessor.invoke(bb));
-            } catch (IllegalAccessException | InvocationTargetException t) {
-                throw new RuntimeException(t);
-            }
-        }
-    }
+		@Override
+		public void free( ByteBuffer bb ) {
+			try {
+				clean.invoke( cleanerAccessor.invoke( bb ) );
+			} catch( IllegalAccessException | InvocationTargetException t ) {
+				throw new RuntimeException( t );
+			}
+		}
+	}
 
-    private static class Java9Deallocator implements Deallocator {
+	private static class Java9Deallocator implements Deallocator {
 
-        /*
-         * Clean is of type jdk.internal.ref.Cleaner, but this type is not accessible, as it is not exported by default.
-         * Using workaround through sun.misc.Unsafe.
-         */
+		/*
+		 * Clean is of type jdk.internal.ref.Cleaner, but this type is not accessible, as it is not exported by default.
+		 * Using workaround through sun.misc.Unsafe.
+		 */
 
-        final Object unsafe;
-        final Method invokeCleaner;
+		final Object unsafe;
+		final Method invokeCleaner;
 
-        Java9Deallocator() {
-            try {
-                Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
-                // avoiding getUnsafe methods, as it is explicitly filtered out from reflection API
-                Field theUnsafe = unsafeClass.getDeclaredField("theUnsafe");
-                theUnsafe.setAccessible(true);
-                unsafe = theUnsafe.get(null);
-                invokeCleaner = unsafeClass.getMethod("invokeCleaner", ByteBuffer.class);
-            } catch (NoSuchMethodException | ClassNotFoundException | IllegalAccessException | NoSuchFieldException t) {
-                throw new RuntimeException(t);
-            }
-        }
+		Java9Deallocator() {
+			try {
+				Class< ? > unsafeClass = Class.forName( "sun.misc.Unsafe" );
+				// avoiding getUnsafe methods, as it is explicitly filtered out from reflection API
+				Field theUnsafe = unsafeClass.getDeclaredField( "theUnsafe" );
+				theUnsafe.setAccessible( true );
+				unsafe = theUnsafe.get( null );
+				invokeCleaner = unsafeClass.getMethod( "invokeCleaner", ByteBuffer.class );
+			} catch( NoSuchMethodException | ClassNotFoundException | IllegalAccessException | NoSuchFieldException t ) {
+				throw new RuntimeException( t );
+			}
+		}
 
-        @Override
-        public void free(ByteBuffer bb) {
-            try {
-                invokeCleaner.invoke(unsafe, bb);
-            } catch (IllegalAccessException | InvocationTargetException t) {
-                throw new RuntimeException(t);
-            }
-        }
+		@Override
+		public void free( ByteBuffer bb ) {
+			try {
+				invokeCleaner.invoke( unsafe, bb );
+			} catch( IllegalAccessException | InvocationTargetException t ) {
+				throw new RuntimeException( t );
+			}
+		}
 
-    }
+	}
 
-    private final Deallocator deallocator;
+	private final Deallocator deallocator;
 
-    public DirectBufferDeallocator() {
-        if (Util.getJavaMajorVersion() >= 9) {
-            deallocator = new Java9Deallocator();
+	public DirectBufferDeallocator() {
+		if( Util.getJavaMajorVersion() >= 9 ) {
+			deallocator = new Java9Deallocator();
 //            logger.debug("initialized direct buffer deallocator for java >= 9");
-        } else {
-            deallocator = new Java8Deallocator();
+		} else {
+			deallocator = new Java8Deallocator();
 //            logger.debug("initialized direct buffer deallocator for java < 9");
-        }
-    }
+		}
+	}
 
-    public void deallocate(ByteBuffer buffer) {
-        deallocator.free(buffer);
-    }
+	public void deallocate( ByteBuffer buffer ) {
+		deallocator.free( buffer );
+	}
 
 }
